--- a/.github/workflows/meta-upload.yml
+++ b/.github/workflows/meta-upload.yml
@@ -1,17 +1,18 @@
 name: Upload to Meta Quest
 
 on:
-  push:
-    branches:
-      - main
-      - develop
+  workflow_run:
+    workflows:
+      - Unity VR Android Build
+    types:
+      - completed
 
 permissions:
   contents: write
 
 jobs:
   deploy-meta:
-    needs: Unity VR Android Build
+    if: ${{ github.workflow_run.conclusion == 'success' && (github.workflow_run.head_branch == 'main' || github.workflow_run.head_branch == 'develop') }}
     name: Upload to Meta Quest
     runs-on: ubuntu-latest
 
