--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository in Detached HEAD
+      - name: Checkout Repository
         uses: actions/checkout@v4
         with:
           lfs: true
@@ -76,18 +76,6 @@ jobs:
           buildMethod: BuildScript.Execute
           buildsPath: Builds/Android
           allowDirtyBuild: true
-
-      - name: Commit version changes
-        if: ${{ github.event_name == 'pull_request' }}
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git checkout -- Packages/manifest.json Packages/packages-lock.json
-          git add ProjectSettings/ProjectSettings.asset Packages/manifest.json Packages/packages-lock.json
-          git commit -m "Version bump and revert CI manifest swap on branch $GITHUB_REF" || echo "No changes to commit"
-          git push origin HEAD:$GITHUB_REF
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
