--- a/.github/workflows/meta-upload.yml
+++ b/.github/workflows/meta-upload.yml
@@ -1,17 +1,21 @@
-name: Upload to Meta Quest
+name: Upload to Meta Quest & Commit Version
 
 on:
-  workflow_run:
-    workflows: ["Unity VR Android Build"]
-    types: [completed]
+  pull_request:
+    types: [closed]
+    branches:
+      - main
+      - develop
 
 permissions:
   contents: write
 
 jobs:
-  setup-unity:
-    name: Setup Unity, Version Bump, and Environment
+  upload-meta:
+    name: Upload to Meta Quest & Commit Version
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -21,52 +25,6 @@ jobs:
         with:
           name: Unity-Build
           path: Builds/Android
-
-      - name: Apply CI manifests
-        run: |
-          cp Packages/manifest.ci.json Packages/manifest.json
-          cp Packages/packages-lock.ci.json Packages/packages-lock.json
-
-      - name: Free disk space
-        uses: jlumbroso/free-disk-space@v1.3.1
-        with:
-          tool-cache: true
-          android: true
-          dotnet: true
-          haskell: true
-          large-packages: true
-          docker-images: true
-
-      - name: Run Version Bump
-        uses: game-ci/unity-builder@v4
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
-        with:
-          targetPlatform: Android
-          buildMethod: MyVersionManager.VersionBump
-
-      - name: Upload bumped project files
-        uses: actions/upload-artifact@v4
-        with:
-          name: bumped-files
-          path: |
-            ProjectSettings/ProjectSettings.asset
-            Packages/manifest.json
-            Packages/packages-lock.json
-
-  upload-meta:
-    name: Upload to Meta Quest & Commit Version
-    needs: setup-unity
-    runs-on: ubuntu-latest
-    if: |
-      github.event.workflow_run.conclusion == 'success' &&
-      github.event.workflow_run.event == 'pull_request' &&
-      (github.event.workflow_run.head_branch == 'main' || github.event.workflow_run.head_branch == 'develop')
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
       - name: Download bumped project files
         uses: actions/download-artifact@v4
